--- a/index.html
+++ b/index.html
@@ -481,20 +481,34 @@
 
 <p>The left are currently empowering racist, xenophobic, anti-progressive, anti-science politicians by rejecting the more valid concerns and democratic rights of voters when it comes to immigration. During the COVID border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short-term effects. In the long-term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow due to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
 
-<p>The South Australian Employment Service (SAEC) detailed above will reduce reliance on skilled immigration. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
-
-<p>Although immigration policy is primarily a federal government matter, it is important for me to have policies on this at the state level, since it sends a message to the federal government. Meanwhile, if implemented, The South Australian Employment Service (SAEC) will reduce the demand for skilled workers to move to South Australia, reduce the need for state-sponsored skilled visas, and reduce the demand for the federal government to hand out other skilled visas.</p>
-
 <p>The Albanese government's current plan is net immigration of around 230 000 per year, a rate of 2.3 million people per decade. The opposition's plan is to reduce this to a net intake of 130 000 per year, a rate of 1.3 million per decade. Neither has a comprehensive plan like my plan above to end our reliance on high rates of worker immigration.
 </p>
 
-<p>One might think that there isn't much that can be done about this at the state parliament level, but we can do a lot:</p>
+<p>In addition to this legal immigration, the federal government has estimated that there are more than 75,000 illegal immigrants in Australia, most people who have deliberately remained in the country after their temporary visa is no longer valid. Corporations and their politicians treat this degree of lawbreaking as a non-issue because they profit from it.</p>
+
+<p>We don't know how many of these 75,000 illegal immigrants are in South Australia because the government doesn't even estimate this.</p>
+
+<p>Although immigration policy is primarily a federal government matter, it is important for me to have policies on this at the state level, since it sends a message to the federal government. Meanwhile, there are a number of things that can be done at the state level:</p>
+
 <ul>
- <li>11.1 Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here, as explained in Policy 10.0 above.</li>
- <li>11.2 Reduce or cease state government requests for skilled visas from the federal government.</li>
- <li>11.3 Use the platform of state parliament to call on the federal government to further reduce unnecessary visas.</li>
- <li>11.4 Use the platform of state parliament to advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
+ <li>11.1 Solve the police staffing crisis with police support officers, as detailed in Policy 12.0, and ensure SAPOL have enough total staff to assist the Australian Border Force in enforcing immigration law.
+ <li>11.2 Crack down on businesses that employ illegal workers.</li>
+ <li>11.3 Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here through the SAEC explained in Policy 10.0 above.</li>
+ <li>11.4 Reduce or cease state government requests for skilled visas from the federal government.</li>
+ <li>11.5 Use the platform of state parliament to call on the federal government to take action to:
+  <ul>
+   <li>Crack down on businesses that employ illegal workers.</li>
+   <li>Require all visitors on temporary visas to have a return ticket booked.</li>
+   <li>Enhance data sharing between agencies and businesses including airlines to flag overstays, and transactions such as flight cancellations suggesting likely intent to overstay.</li>
+   <li>Provide the Border Force with the resources to prevent illegal visa overstays.</li>
+   <li>Reduce unnecessary visas for work that we can train Australians to do.</li>
+  </ul>
+ <li>11.6 Use the platform of state parliament to advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
 </ul>
+
+<p>We have a police staffing crisis in South Australia, and the lack of enforcement of temporary visas is all the more reason to solve the police staffing crisis with police support officers, as detailed in Policy 12.0 below. With .</p>
+
+<p>The South Australian Employment Service (SAEC) detailed above will reduce the demand for skilled workers to move to South Australia, reduce the need for state-sponsored skilled visas, and reduce the demand for the federal government to hand out other skilled visas. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
 
 <h3>Policing</h3>
 
