--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 <p>My policies will prevent this from excessively inflating housing prices further for two reasons:</p>
  <ul>
   <li>Firstly, the loan will be no greater than necessary to allow the buyer to make up the difference in their buying power to a designated price limit, and only a designated buyer will get access to this loan;</li>
-  <li>Secondly, due to Policy 2 below, property investors will be incentivised or required to sell to the rightful resident at such a designated price, rather than sell to someone else, and this price limit will be stricter for large-portfolio investments than for a primary residence, as explaiend below.</li>
+  <li>Secondly, due to Policy 2 below, property investors will be incentivised or required to sell to the rightful resident at such a designated price, rather than sell to someone else, and this price limit will be stricter for large-portfolio investments than for a primary residence, as explained below.</li>
  </ul>
 
 <h4>Regulate who large portfolio land and housing investors must offer their properties to and how much they can charge<br>
@@ -367,11 +367,11 @@
 
 <p>We've also heard stories of long-term renters being kicked out of their home where they'd been living for years or decades, just so that the property can be sold to someone with more money, or rented out as an Airbnb.</p>
 
-<p>Most of us recognise both of these examples as an injustice. The fact taht these unjustices are allowed also incentivises large-portfolio housing and land investment, which contributes to the housing crisis. Furthermore, both examples indicate that legal property rights have become too disconnected from moral property rights, which causes other injustices and further contributes to the housing crisis.</p>
+<p>Most of us recognise both of these examples as an injustice. The fact that these injustices are allowed also incentivises large-portfolio housing and land investment, which contributes to the housing crisis. Furthermore, both examples indicate that legal property rights have become too disconnected from moral property rights, which causes other injustices and further contributes to the housing crisis.</p>
 
 <p>To solve both of these issues we could:</p>
 
-<li>1.1 Require large-portfoliio land and housing investors to pay for an assessment of investment properties by a dedicated government agency. This agency will then use this assessment to set a limit on the rent and the sale price, based on the property assessment and a democratically determined housing price growth limit. This limit will be high enough to prevent housing prices from crashing, and allow home-owners to maintain the value on their primary residences, but low enough to prevent hyperinflation and price gouging by large portfolio investors.</li>
+<li>1.1 Require large-portfolio land and housing investors to pay for an assessment of investment properties by a dedicated government agency. This agency will then use this assessment to set a limit on the rent and the sale price, based on the property assessment and a democratically determined housing price growth limit. This limit will be high enough to prevent housing prices from crashing, and allow home-owners to maintain the value on their primary residences, but low enough to prevent hyperinflation and price gouging by large portfolio investors.</li>
 <li>1.2 Incentivise or require wealthy property investors to offer their properties to any past residents in order of how long they have lived there, so that those with the greatest sentimental attachment to the property have the option to buy or rent the property at no more than the price limit.</li>
 <li>1.3 If there are no past residents who are interested in buying or renting the property at the offered price (no more than the price limit), the agency will determine which applicant it should be sold or rented to based on their degree of need.</li>
 
@@ -506,7 +506,7 @@
  <li>11.6 Use the platform of state parliament to advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
 </ul>
 
-<p>We have a police staffing crisis in South Australia, and the lack of enforcement of temporary visas is all the more reason to solve the police staffing crisis with police support officers, as detailed in Policy 12.0 below. With .</p>
+<p>We have a police staffing crisis in South Australia, and the lack of enforcement of temporary visas is all the more reason to solve the police staffing crisis with police support officers, as detailed in Policy 12.0 below.</p>
 
 <p>The South Australian Employment Service (SAEC) detailed above will reduce the demand for skilled workers to move to South Australia, reduce the need for state-sponsored skilled visas, and reduce the demand for the federal government to hand out other skilled visas. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
 
