--- a/index.html
+++ b/index.html
@@ -179,17 +179,6 @@
  </ul>
 
  <p>In other words, if enough people including competent experts were adequately paid to work together on solving our problems, they would solve our problems. But ensuring this is implemented well enough requires voters to take action to encourage independent policy thinkers to run for office and get them elected.</p>
-
- 
-
-<section id="qualityoflifecrisis" class="content-section responsive-width">
- <h2>The Quality of Life Crisis</h2>
-
- <p>All of the crises I mentioned above, including the cost of living crisis, together cause an even bigger and more fundamental crisis: the quality of life crisis. Attempting to reduce the cost of living by reducing our quality of life is not a real solution, since fundamentally the main crisis we are trying to solve when we address cost of living is a quality of life crisis. My policies address this by addressing not only the cost of living crisis but all of the crises listed above.</p>
-
- <p>With technology improving, quality of life should be improving too. Instead, we are seeing a decline in quality of life, especially when it comes to the quality of housing that people are living in.</p>
-
-</section>
      
 <section id="policy" class="content-section responsive-width">
 
@@ -258,7 +247,7 @@
   <li>
    <a href="#8.0_Cheap_Essentials">Provide cheap electricity and cheap healthy foods with government investment, regulation and compensation</a>
   </li>
-  <h3><a href="#9.0_QLC">Quality of life and cost of living</a></h3>
+  <h3><a href="#QOL">Quality of life and cost of living</a></h3>
   <li>
    <a href="#9.0_QLC">Create a Quality of Life and Cost of Living Commission</a>
   </li>
@@ -330,8 +319,11 @@
 
 <p>Democratically determine an upper limit on yearly housing price growth. The Quality of Life Commission will enforce this limit with regulations on property investments, explained in Policy below. The Quality of Life Commission will also devise a new housing price index that applies the constant quality principle including property size and location, to ensure that we are not only addressing the nominal cost of housing, but also improving the quality of housing that South Australians can afford.</p> -->
 
-<h3 id="1_Housing">Assist home buyers but counteract hyperinflation by regulating large-portfolio property investment<br>
+<h3 id="1_Housing">Housing<br>
 </h3>
+
+<h4 id="1_Housing">Assist home buyers but counteract hyperinflation by regulating large-portfolio property investment<br>
+</h4>
 
 <p>Housing policies from our political parties threaten two opposite extremes:</p>
 
@@ -375,7 +367,7 @@
 <li>1.2 Incentivise or require wealthy property investors to offer their properties to any past residents in order of how long they have lived there, so that those with the greatest sentimental attachment to the property have the option to buy or rent the property at no more than the price limit.</li>
 <li>1.3 If there are no past residents who are interested in buying or renting the property at the offered price (no more than the price limit), the agency will determine which applicant it should be sold or rented to based on their degree of need.</li>
 
-<h4 id="3.0_Build_Better">Build housing the right way<br>
+<h4 id="3.0_Build_Better">Build housing the right way, protecting the beauty of our suburbs and our hills<br>
  <small>(3.0_Build_Better)</small>
 </h4>
 
@@ -444,6 +436,12 @@
 </h4>
 
 <p>Reduce prices on essentials like electricity, and healthy, environmentally-friendly protein sources for South Australians through investment or through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the government will negotiate and regulate to reduce the price of some essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. Prices will be regulated to be even lower or free at times when there is a surplus of electricity on the grid.</p>
+
+ <h3 id="QOL">The Quality of Life Crisis</h3>
+
+ <p>All of the crises I mentioned above, including the cost of living crisis, together cause an even bigger and more fundamental crisis: the quality of life crisis. Attempting to reduce the cost of living by reducing our quality of life is not a real solution, since fundamentally the main crisis we are trying to solve when we address cost of living is a quality of life crisis. My policies address this by addressing not only the cost of living crisis but all of the crises listed above.</p>
+
+ <p>With technology improving, quality of life should be improving too. Instead, we are seeing a decline in quality of life, especially when it comes to the quality of housing that people are living in.</p>
 
 <h4 id="9.0_QLC">Create a Quality of Life Commission<br>
  <small>(9.0_QLC)</small>
@@ -753,6 +751,11 @@ We also need to address what is fundamentally broken in our major parties. If a 
 </p>
 </section> <!-- beyondpolicy -->
 <!-- <section id="about" class="content-section responsive-width">
+
+<h2>About Me</h2>
+
+<p></p>
+
 </section> --> <!-- about -->
 
 <section id="contact" class="content-section responsive-width">
