--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
  <small>(1.0_Assist_Buyers)</small>
 </h4>
 
-<p>All prospective home owners by allowing zero-interest or low-interest loans for the buyer.</p>
+<p>Assist prospective home owners by allowing zero-interest or low-interest loans for the buyer.</p>
 <p>My policies will prevent this from excessively inflating housing prices further for two reasons:</p>
  <ul>
   <li>Firstly, the loan will be no greater than necessary to allow the buyer to make up the difference in their buying power to a designated price limit, and only a designated buyer will get access to this loan;</li>
