--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
  <small>(6.0_Federal_Underfunding)</small>
 </h4>
 
-<p>Many of the crises in South Australia are due to underfunding from the federal government, who give our natural resources away to corporations without charging properly for them, fail to adequately tax billionaires and decamillionaires, and then fail to provide struggling states like South Australia with adequate funding for our desperately failing services. I use the platform of state parliament to call on the federal government to fund struggling states like South Australia properly. Even more importantly, voting for me will encourage other prospective independents to run at the federal election with similar policies.</p>
+<p>Many of the crises in South Australia are due to underfunding from the federal government, who give our natural resources away to corporations without charging properly for them, fail to adequately tax billionaires and decamillionaires, and then fail to provide struggling states like South Australia with adequate funding for our desperately failing services. I will use the platform of state parliament to call on the federal government to fund struggling states like South Australia properly. Even more importantly, voting for me will encourage other prospective independents to run at the federal election with similar policies.</p>
 
 <h4 id="7.0_Efficiency_Loans">Provide zero-interest or low-interest loans for efficiency upgrades and electrification<br>
  <small>(7.0_Efficiency_Loans)</small>
@@ -459,7 +459,7 @@
 
 <p>The Quality of Life Commission will also have the mandate and resources necessary to investigate the government itself for inefficient spending such as private contractor rorts, and to close regulatory loopholes in any sector that is being taken advantage of by bad actors.</p>
  
-<p>This Commission will greatly increase the speed and efficiency with which we can address the quality of life crisis, compared to relying exclusively on the slow processes of a parliament that lacks the expertise for technical matters. It also means that parliament can direct the Quality of Life Commission to implement policies that require ongoing regulatory involvement such as the following:</p>
+<p>This Commission will greatly increase the speed and efficiency with which we can address the quality of life crisis, compared to relying exclusively on the slow processes of a parliament that lacks the expertise for technical matters. It also means that parliament can direct the Quality of Life Commission to implement policies that require ongoing regulatory involvement.</p>
 
 <h3>Underemployment and immigration</h3>
 
