--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <li>to assist policy discussion with those who are interested</li>
   <li>to support further policy development</li>
  </ul>
- <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail they have written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
+ <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail that they have written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
  <p>Candidates don't need to be perfect at policy. Nobody is. Policy is not a precise science. You don't need to agree with all of a candidate's policies. Most people aren't even interested in policy and that's OK. You don't need to read every detail. But at the very least, you need to know that the details are there, and that the details are theirs. You need to know that they are making their own policy decisions for their own electorate, because that's their job, and if we don't elect political candidates who have demonstrated that they are committed to doing that job and free to do that job, they won't, and that's why they aren't.</p>
 
  <p>In the end, all of the above crises could be solved with just one policy if it were implemented well enough:</p>
