--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
  <ul>
   <li>for those who are interested in the details</li>
   <li>to demonstrate my passion and my capabilities when it comes to thinking independently about policy and politics</li>
-  <li>to ensure accountability</li>
-  <li>to assist policy discussion with those who are interested</li>
-  <li>to support further policy development</li>
+  <li>to ensure accountability;</li>
+  <li>to assist policy discussion with those who are interested;</li>
+  <li>to support further policy development.</li>
  </ul>
  <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail that they have written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
  <p>Candidates don't need to be perfect at policy. Nobody is. Policy is not a precise science. You don't need to agree with all of a candidate's policies. Most people aren't even interested in policy and that's OK. You don't need to read every detail. But at the very least, you need to know that the details are there, and that the details are theirs. You need to know that they are making their own policy decisions for their own electorate, because that's their job, and if we don't elect political candidates who have demonstrated that they are committed to doing that job and free to do that job, they won't, and that's why they aren't.</p>
@@ -328,15 +328,15 @@
 <p>Housing policies from our political parties threaten two opposite extremes:</p>
 
 <ul>
- <li>One set of policies tries to assist buyers in ways that simply hyperinflate property prices and as a result fail to make housing more affordable</li>
- <li>The other set of policies threatens to crash the housing market, which most voters won't accept</li>
+ <li>One set of policies tries to assist buyers in ways that simply hyperinflate property prices and as a result fail to make housing more affordable.</li>
+ <li>The other set of policies threatens to crash the housing market, which most voters won't accept.</li>
 </ul>
 
 <p>The solution requires a comprehensive set of policies addressing and balancing all sides of the equation. My solution finds a balance between:</p>
 
 <ul>
- <li>Providing government loan-assistance to home-buyers up to a regulated maximum price, ensuring that home-owners don't lose value on their primary residence</li>
- <li>Regulating large-portfolio property and land investment, preventing hyperinflation and price gouging</li>
+ <li>Providing government loan-assistance to home-buyers up to a regulated maximum price, ensuring that home-owners don't lose value on their primary residence;</li>
+ <li>Regulating large-portfolio property and land investment, preventing hyperinflation and price gouging.</li>
 </ul>
 
 <h4 id="1.0_Assist_Buyers">Provide zero-interest or low-interest loans to assist rightful residents at a regulated price<br>
@@ -386,8 +386,8 @@
 
 <p>To improve quality of life and reduce the burden on our hospital system we can:</p>
 <ul>
- <li>4.1.1 Build government-owned aged care centres to ensure adequate supply of high-quality care at affordable prices</li>
- <li>4.1.2 Fund a program of roving nurses to provide both aged care and urgent care in people's homes</li>
+ <li>4.1.1 Build government-owned aged care centres to ensure adequate supply of high-quality care at affordable prices.</li>
+ <li>4.1.2 Fund a program of roving nurses to provide both aged care and urgent care in people's homes.</li>
 </ul>
 
 <h4 id="4.2_More_EDs">Increase the number of hospitals, emergency departments and staff
@@ -397,14 +397,14 @@
 <p>Increase not only the size of emergency departments and hospitals, but also the number of them, the number of staff, and the number, quality and affordability of aged care centres. We can:</p>
 
 <ul>
- <li>4.2.1 Where feasible, reopen hospitals that are no longer being used as hospitals, such as the Blackwood Hospital;</li>
- <li>4.2.2 Where feasible, reopen emergency departments that have been closed, like the emergency department at the Repat;</li>
- <li>4.2.3 Build new hospitals, and design them to efficiently provide the most desperately needed services;</li>
- <li>4.2.4 Allow more Australians to study clinical psychology, especially Masters programs, and medical degrees in South Australia;</li>
- <li>4.2.5 Allow psychologists to assist psychiatrists in mental hospitals;</li>
- <li>4.2.6 Hire more social workers and occupational therapists to assist psychiatrists in our mental hospitals;</li>
+ <li>4.2.1 Where feasible, reopen hospitals that are no longer being used as hospitals, such as the Blackwood Hospital.</li>
+ <li>4.2.2 Where feasible, reopen emergency departments that have been closed, like the emergency department at the Repat.</li>
+ <li>4.2.3 Build new hospitals, and design them to efficiently provide the most desperately needed services.</li>
+ <li>4.2.4 Allow more Australians to study clinical psychology, especially Masters programs, and medical degrees in South Australia.</li>
+ <li>4.2.5 Allow psychologists to assist psychiatrists in mental hospitals.</li>
+ <li>4.2.6 Hire more social workers and occupational therapists to assist psychiatrists in our mental hospitals.</li>
  <li>4.2.7 Investigate the viability of specialist graduate medical programs at our universities, so that qualified health professionals can become specialist doctors by learning only what is relevant to a chosen specialty.</li>
- <li>4.3 Increase the number of rehab facilities</li>
+ <li>4.3 Increase the number of rehab facilities.</li>
 </ul>
 
 <h3 id="howtopay">How will we pay for this?</h3>
@@ -453,7 +453,7 @@
 <ul>
  <li>9.1 Regulate against corporations and landlords contributing to the quality of life crisis;</li>
  <li>9.2 Charge those corporations and landlords for harmful, inflationary or otherwise costly behaviour, advocating for constitutional reform or federal implementation to facilitate this if necessary;</li>
- <li>9.3 Spend this revenue on reducing the cost of living and improving quality of life further. Advocate for constitutional reform or federal implementation that will allow us to further improve this commission by allowing it to implement its own variable charges.</li>
+ <li>9.3 Spend this revenue on reducing the cost of living and improving quality of life further; Advocate for constitutional reform or federal implementation that will allow us to further improve this commission by allowing it to implement its own variable charges;</li>
  <li>9.4 Audit government spending to ensure that there is no waste including private contractor rorts, so that this money can be better spent on cost of living measures.</li>
 </ul>
 
