--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@
 
 <p>3.1 The policies above and below may be enough to solve the housing affordability crisis, but we also need to improve the quality of housing that people can afford by building the right type of high-quality housing in the right locations, instead of destroying the beauty of our existing suburbs and wasting land on the outskirts with a lack of proper planning. With all of the above policies, we won't need to sacrifice our quality of life to reduce the cost of living any longer. We can replace ugly buildings with beautiful ones, instead of replacing beautiful buildings and gardens with ugly ones, and we can plan new land releases better to use the land more efficiently with higher quality housing with a wide variety of densities, along with adequate space for new hospitals and other necessary amenities and infrastructure.</p>
 
-<p>In order to reduce commute times, we should also investigate the possibility of creating new business districts at the far outskirts of our suburbs, for example, beyond the northern outskirts of Adelaide's suburbs.</p>
+<p>In order to reduce commute times and efficiently use land, we should also investigate the possibility of creating new business districts at the far outskirts of our suburbs, for example, beyond the northern outskirts of Adelaide's suburbs.</p>
 
-<p>3.2 Ban the destruction of beautiful homes, gardens and heritage buildings against the will of the community and any developments that deface the Adelaide Hills</p>
+<p>3.2 Ban the destruction of beautiful homes, gardens and heritage buildings against the will of the community and any developments that deface the Adelaide Hills.</p>
 
 <h3>Hospitals, aged care and urgent care
 </h3>
@@ -404,6 +404,7 @@
  <li>4.2.5 Allow psychologists to assist psychiatrists in mental hospitals.</li>
  <li>4.2.6 Hire more social workers and occupational therapists to assist psychiatrists in our mental hospitals.</li>
  <li>4.2.7 Investigate the viability of specialist graduate medical programs at our universities, so that qualified health professionals can become specialist doctors by learning only what is relevant to a chosen specialty.</li>
+ <li>4.2.8 Create a new position in emergency departments called a medic, ranked between a nurse and a doctor, who specialises on the intermediate work that lies around the overlap between the work of nurses and doctors, improving care through specialised emergency department training and encouraging both genders to work in this kind of role.</li>
  <li>4.3 Increase the number of rehab facilities.</li>
 </ul>
 
