--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
  <p>Sometimes it seems like most of our politicians and political parties aren't even trying. They play around the edges; throw a lot of money at problems without solving their causes; choose policies that mitigate some problems while making other problems worse, or throw a lot of money at things that barely address any problems at all. Sometimes they choose a hopeless political strategy to boot, and for almost all political parties it's a divisive strategy.</p>
  <p>My plan involves a comprehensive set of policy solutions, respect for the whole community, and a pragmatic strategy to support a democratic political movement beyond our own electorate here in Waite, and beyond state politics, to influence politics for the better at the federal and international levels. We need better policies and we need a better way of doing politics. If I'm elected, I'll use the platform of state parliament to do my part in both.</p>
  <p>By the election in March next year, I'll get my plan across to as many people in Waite as I can, and I could use your support.</p>
- <p>If you follow me on social media or video platforms  you can see my videos and perhaps even share them around. This would be a great help, as would sharing this website with whoever you think might be interested.</p>
+ <p>If you follow me on social media or video platforms, you can see my videos and perhaps even share them around. This would be a great help, as would sharing this website with whoever you think might be interested.</p>
+ <p>If you would like to donate, I can legally take donations of up to $5000, but even a few dollars would help. I'll be competing with people who are allowed to spend up to $100 000 on their campaign.</p>
  <p>
  Best wishes,
  <br>
