--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
  <section id="whydetail" class="content-section responsive-width">
  <h2>Why so much policy detail?</h2>
- <p>This website contains over 7000 words of policy discussion including thousands of words of my own policy suggestions, and I don't expect most of you to read all of that.</p>
+ <p>This website contains over 7000 words of policy discussion including thousands of words of my own policy suggestions, and I don't expect most of you to read all of that. Nor do I think I should be deciding policy by myself.</p>
  <p>My policy suggestions are described in detail below</p>
  <ul>
   <li>for those who are interested in the details</li>
@@ -171,8 +171,21 @@
   <li>to assist policy discussion with those who are interested;</li>
   <li>to support further policy development.</li>
  </ul>
+ <p>However, it's important to understand that politicians should really only have one job:</p>
+ <ul>
+  <li>to ensure government departments are working as well as possible for the interests of their electorate.</li>
+ </ul>
+ That means providing government departments with:
+ <ul>
+  <li>the right powers;</li>
+  <li>the right oversight;</li>
+  <li>the right internal leaders;</li>
+  <li>and the right amount of funding;</li>
+ </ul>
+ <p>If politicians just did this one job well, government departments, in collaboration with others including experts and the general public, could take care of everything else. But in order for politcians to do that well, they need to be able to think critically and independently about policy, and we need to support the candidates who have most demonstrated that ability.</p>
+
  <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail that they have written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
- <p>Candidates don't need to be perfect at policy. Nobody is. Policy is not a precise science. You don't need to agree with all of a candidate's policies. Most people aren't even interested in policy and that's OK. You don't need to read every detail. But at the very least, you need to know that the details are there, and that the details are theirs. You need to know that they are making their own policy decisions for their own electorate, because that's their job, and if we don't elect political candidates who have demonstrated that they are committed to doing that job and free to do that job, they won't, and that's why they aren't.</p>
+ <p>Candidates don't need to be perfect at policy. Nobody is. Policy is not a precise science. You don't need to agree with all of a candidate's policies. Most people aren't even interested in policy and that's OK. You don't need to read every detail. But at the very least, you need to know that the details are there, and that the details are theirs. You need to know that they are capable of thinking independently about policy for their own electorate, because that's their job, and if we don't elect political candidates who have demonstrated that they are committed to doing that job and free to do that job, they won't, and that's why they aren't.</p>
 
  <p>In the end, all of the above crises could be solved with just one policy if it were implemented well enough:</p>
  <ul>
