--- a/index.html
+++ b/index.html
@@ -173,16 +173,17 @@
  </ul>
  <p>However, it's important to understand that politicians should really only have one job:</p>
  <ul>
-  <li>to ensure government departments are working as well as possible for the interests of their electorate.</li>
+  <li>to ensure their electorate is being served as well as possible by government departments.</li>
  </ul>
  That means providing government departments with:
  <ul>
   <li>the right powers;</li>
+  <li>the right limitations on their powers;</li>
   <li>the right oversight;</li>
   <li>the right internal leaders;</li>
   <li>and the right amount of funding;</li>
  </ul>
- <p>If politicians just did this one job well, government departments, in collaboration with others including experts and the general public, could take care of everything else. But in order for politcians to do that well, they need to be able to think critically and independently about policy, and we need to support the candidates who have most demonstrated that ability.</p>
+ <p>If politicians just did this one job well, government departments, in collaboration with others including other experts and the general public, could take care of everything else, including all of the other policy making. But in order for politicians to manage government departments well, they need to be capable of thinking critically and independently about policy, and we need to support the candidates who have best demonstrated that ability.</p>
 
  <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail that they have written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
  <p>Candidates don't need to be perfect at policy. Nobody is. Policy is not a precise science. You don't need to agree with all of a candidate's policies. Most people aren't even interested in policy and that's OK. You don't need to read every detail. But at the very least, you need to know that the details are there, and that the details are theirs. You need to know that they are capable of thinking independently about policy for their own electorate, because that's their job, and if we don't elect political candidates who have demonstrated that they are committed to doing that job and free to do that job, they won't, and that's why they aren't.</p>
