--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
   <li>
    <a href="#9.0_QLC">Create a Quality of Life and Cost of Living Commission</a>
   </li>
-  <h3><a href="#10.0_SAEC">Unemployment and underemployment</a></h3>
+  <h3><a href="#10.0_SAES">Unemployment and underemployment</a></h3>
   <li>
-   <a href="#10.0_SAEC">Create a South Australian government employment service</a>
+   <a href="#10.0_SAES">Create a South Australian government employment service</a>
   </li>
   <h3><a href="#11.0_Reduce_Immigration">Immigration, housing quality, unemployment and underemployment</a></h3>
   <li>
@@ -479,8 +479,8 @@
 
 <h3>Underemployment and immigration</h3>
 
-<h4 id="10.0_SAEC">Create a South Australian government employment service<br>
- <small>(10.0_SAEC)</small>
+<h4 id="10.0_SAES">Create a South Australian government employment service<br>
+ <small>(10.0_SAES)</small>
 </h4>
 
 <p>Provide government-supported apprenticeships and job placements for all unemployed and underemployed Australians who want them by creating a South Australian government employment service. Expert in the field, David O'Halloran, PhD, recommends creating government employment services at the state level rather than at the federal level. Currently we have neither. The existing private services are inadequate. With the support of the funding from charging corporations and decamillionaires appropriately, the South Australian government employment service will ensure that everyone has the support they need to do the work that will most benefit South Australians, and that businesses that need support to help with this will be given that support.</p>
@@ -507,7 +507,7 @@
 <ul>
  <li>11.1 Solve the police staffing crisis with police support officers, as detailed in Policy 12.0, and ensure SAPOL have enough total staff to assist the Australian Border Force in enforcing immigration law.
  <li>11.2 Crack down on businesses that employ illegal workers.</li>
- <li>11.3 Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here through the SAEC explained in Policy 10.0 above.</li>
+ <li>11.3 Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here through the SAES explained in Policy 10.0 above.</li>
  <li>11.4 Reduce or cease state government requests for skilled visas from the federal government.</li>
  <li>11.5 Use the platform of state parliament to call on the federal government to take action to:
   <ul>
@@ -520,7 +520,7 @@
  <li>11.6 Use the platform of state parliament to advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
 </ul>
 
-<p>The South Australian Employment Service (SAEC) detailed above will reduce the demand for skilled workers to move to South Australia, reduce the need for state-sponsored skilled visas, and reduce the demand for the federal government to hand out other skilled visas. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
+<p>The South Australian Employment Service (SAES) detailed above will reduce the demand for skilled workers to move to South Australia, reduce the need for state-sponsored skilled visas, and reduce the demand for the federal government to hand out other skilled visas. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
 
 <h3>Policing</h3>
 
